# blacs_test

./: CMakeLists.txt  input.txt
src/: blacs.cpp  linalg.h  main.cpp
